--- a/src/main/resources/templates/lista_horarios.html
+++ b/src/main/resources/templates/lista_horarios.html
@@ -110,7 +110,7 @@
               </div>
               <div class="p-2">
                 <button class ="btn btn-danger" th:onclick="|eliminarhorario('${horario.idHorario}','${idclase}')|">
-                  <span class="fas fa-trash-alt"></span>
+                  <span class="fas fa-minus"></span>
               </div>
               
             </div>   
