--- a/src/main/resources/templates/lista_profesores_clases.html
+++ b/src/main/resources/templates/lista_profesores_clases.html
@@ -76,7 +76,7 @@
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
       <div class="p-2"><a class= "btn btn-info" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Generar informe</a></div>
-      <div class="p-2"><button class="btn btn-primary" onclick="mostrar(selector)">Agregar Clase</button></div>
+      <div class="p-2"><button class="btn btn-primary" onclick="mostrar('selector')">Agregar Clase</button></div>
     </div>
   <div class="container" th:object=${profesor} style="display:none" id="selector">
     <form th:action="@{/admin/actualizar_clases}" th:object ="${clasesParaAsignar}" method="POST">
