--- a/src/main/resources/templates/lista_horarios.html
+++ b/src/main/resources/templates/lista_horarios.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/admin/lista_profesores_clases"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         
@@ -72,9 +72,6 @@
   <div class="container">
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
-          <div class="p-2">
-            <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
-          </div>
           <div class="p-2"><a class="btn btn-primary btn-lg" th:href="@{/admin/agregar_horario/}+${idclase}">Agregar Horario</a></div>
         </div>
     </div>
@@ -91,7 +88,6 @@
           <th class="col-sm-1">Horario fin</th>
           <th class="col-sm-2">Acciones</th>
         </tr>
-
       </thead>
   
       <tbody>
