--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Profesores</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    
+    <!--StyleSheets CSS-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--Iconos de FontAwesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
-    
+    <script src="/showSelector.js"></script>
+
+    <!--tablas-->
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
+    <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
   </head>
 <body>
   <!--logos-->
@@ -59,17 +72,59 @@
   <!--Barra de busqueda--> 	  	
       
   <!--filtrar-->
-  <div class="container">
+  <div class="container pt-3">
     <div class="d-flex flex-row justify-content-center">
-        <div class="row">
-          <div class="p-2"><a class= "btn btn-info" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Generar informe</a></div>
-          <div class="p-2"><a class= "btn btn-secondary" href="/admin/lista_profesores_completa"> <span class="fas fa-eye"></span> Mostrar más datos</a></div>
-          <div class="p-2"><a class="btn btn-primary btn-lg" href="/admin/lista_profesores/nuevo">Nuevo Profesor</a></div>
+      <div class="row">
+        <div class="p-2">
+          <a class= "btn btn-lg btn-info mr-2" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Generar informe</a>
+          <button class="btn btn-primary btn-lg" onclick="mostrar('formularioProfesor')">Nuevo Profesor</button>
         </div>
+      </div>
     </div>
   </div>
+
+<div class="container pt-3" id="formularioProfesor" style="display:none" th:object=${clases}>
+  <form th:action="@{/admin/save}" th:object=${profesor} method="POST">
+    <div class="card">
+      <div class="card-body">
+        <div class="form-group">
+            <input type="hidden" th:field="*{idProf}" id="idprofesor">
+        </div>	
+        <div class="form-group form-inline">
+            <label class= "mr-2" for="nombre">Nombre:</label>
+            <input th:field="*{nombreProf}" type="text" class="form-control mr-3 col-lg-3"/>
+            <label class= "mr-2" for="apellido">Apellido:</label>
+            <input th:field="*{apellidoProf}" type="text" class="form-control mr-3 col-lg-3"/>
+            <label class="mr-2" for="dni">DNI:</label>
+            <input th:field="*{dniProf}" type="number" class="form-control col-lg-2"/>
+        </div>
+        <div class="form-group form-inline pt-3">
+            <label class="mr-2" for="fechaNacimiento">Fecha de Nacimiento:</label>
+            <input required th:field="*{fechaNacProf}" type="date" class="form-control mr-3 col-lg-2"/>
+            <label class="mr-2" for="telefono">Teléfono:</label>
+            <input th:field="*{telefonoProf}" type="number" class="form-control mr-4 col-lg-2"/>
+            <label class="mr-2" for="matricula">Matrícula:</label>
+            <input th:field="*{matriculaProf}" type="text" class="form-control mr-3 col-lg-2"/>
+            
+        </div>
+            
+        <div class="form-group form-inline pt-3">
+            
+            <label class="mr-2">Clases a cargo:</label>
+            <select type="text" class="form-control selectpicker col-lg-4 " multiple data-live-search="true" th:field="${profesor.clases}" >
+                <option  th:each= "clase :${clases}" th:value="${clase.idClase}" th:text="${clase.nombreDep}"></option>
+            </select>
+        </div>
+
+        <button type="submit" class="btn btn-primary" >Guardar</button>
+      </div>
+    </div>
+
+      
+  </form>
+</div>
   
-  <div class="container">
+  <div class="container pt-3">
     <table class="table table-striped table-bordered table-responsive tabla_profesores">
       <thead> 
         <tr>
@@ -117,12 +172,6 @@
     </table>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
-  <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
    <script>
     $('.tabla_profesores').DataTable({
       "language": {
