--- a/src/main/resources/templates/asistencia.html
+++ b/src/main/resources/templates/asistencia.html
@@ -1,175 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"
+    />
     <!--Iconos de FontAwesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-    <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/76bcb4e810.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
-
   </head>
-<body>
-  <!--logos-->
-  <div class="d-flex">
-    <div class="p-2 mr-auto">
-        <img src="static/img/deportes.png" th:src="@{/img/deportes.png}" alt="Inicio" width="120" height="120" />
-    </div>
-    <div class="p-2">
-      <img src="static/img/escudo.png" width="100" height="100"  th:src="@{/img/escudo.png}" alt="deportes" />
-    </div>
-  </div>
-
-  <!--Navbar header-->
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          
-          <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administrar asistencia</h3> <span class="sr-only">(current)</span></a>
-          </li>
-         
-        </ul>
-        
-        <ul class="navbar-nav ml-md-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Administrador
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/logout">Cerrar sesión</a>
-            </div>
-          </li>
-        
-        </ul>
+  <body>
+    <!--logos-->
+    <div class="d-flex">
+      <div class="p-2 mr-auto">
+        <img
+          src="static/img/deportes.png"
+          th:src="@{/img/deportes.png}"
+          alt="Inicio"
+          width="120"
+          height="120"
+        />
       </div>
-    </nav>
-  </div>
+      <div class="p-2">
+        <img
+          src="static/img/escudo.png"
+          width="100"
+          height="100"
+          th:src="@{/img/escudo.png}"
+          alt="deportes"
+        />
+      </div>
+    </div>
 
-  
-  <!--Barra de busqueda--> 	  	
-      
-  <!--filtrar-->
-  
-  
-  <div class="container">
-    <table class="table table-striped table-bordered table-responsive tabla_profesores">
-      <thead> 
-        <tr>
-          <th class="col-sm-1">Clase</th>
-          <th class="col-sm-1">Profesor a cargo</th>
-          <th class="col-sm-1">Dia</th>
-          <th class="col-sm-1">Horario</th>
-          <th class="col-sm-3">Marcar asistencia</th>
-        </tr>
+    <!--Navbar header-->
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">
+                <h3>Administrar asistencia</h3>
+                <span class="sr-only">(current)</span></a
+              >
+            </li>
+          </ul>
 
-      </thead>
-      
-  	
-      <tbody>
-         <tr>
-          <td>Futbol Femenino</td>
-          <td>Juan Perez </td>
-          <td>28/11/2020</td>
-          <td>14:00hs</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar asistencia
-                </a>
+          <ul class="navbar-nav ml-md-auto">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                th:text="${#authentication.getPrincipal().getUsername()}"
+              >
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <a class="dropdown-item" href="/admin/configuracion"
+                  ><i class="fas fa-cog"></i> Configuracion</a
+                >
+                <li>
+                  <a class="dropdown-item" href="/admin/configuracion">
+                    <i class="fas fa-envelope"></i> Support</a
+                  >
+                </li>
+                <li class="divider"></li>
+                <li>
+                  <a class="dropdown-item" href="/logout"
+                    ><i class="fas fa-power-off"></i> Cerrar Sesión</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <!--Barra de busqueda-->
+
+    <!--filtrar-->
+
+    <div class="container">
+      <table
+        class="table table-striped table-bordered table-responsive tabla_profesores"
+      >
+        <thead>
+          <tr>
+            <th class="col-sm-1">Clase</th>
+            <th class="col-sm-1">Profesor a cargo</th>
+            <th class="col-sm-1">Dia</th>
+            <th class="col-sm-1">Horario</th>
+            <th class="col-sm-3">Marcar asistencia</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>Futbol Femenino</td>
+            <td>Juan Perez</td>
+            <td>28/11/2020</td>
+            <td>14:00hs</td>
+            <td>
+              <div class="d-flex align-items-stretch">
+                <div class="p-2">
+                  <a class="btn btn-warning">
+                    <span class="fa fa-pencil fa-fw"></span>Editar asistencia
+                  </a>
+                </div>
               </div>
-             </div>
-                     
-          </td>
-        </tr>
-         <tr>
-          <td>Futbol Masculino</td>
-          <td>Juan Perez </td>
-          <td>30/11/2020</td>
-          <td>16:00hs</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar asistencia
-                </a>
+            </td>
+          </tr>
+          <tr>
+            <td>Futbol Masculino</td>
+            <td>Juan Perez</td>
+            <td>30/11/2020</td>
+            <td>16:00hs</td>
+            <td>
+              <div class="d-flex align-items-stretch">
+                <div class="p-2">
+                  <a class="btn btn-warning">
+                    <span class="fa fa-pencil fa-fw"></span>Editar asistencia
+                  </a>
+                </div>
               </div>
-             </div>
-                     
-          </td>
-        </tr>
-      
-        <tr  th:each = "profesor:${profesores}">
-          <th  th:text="${profesor.nombreProf}">	</th>
-          <td  th:text="${profesor.apellidoProf}"> </td>
-          <td  th:text="${profesor.telefonoProf}"> </td>
-          <td  th:text="${profesor.dniProf}"></td>
-          <td>
-          	<div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning" th:href="@{/admin/editar_profesor/}+${profesor.idProf}"> 
-                  <span class="fa fa-pencil fa-fw"></span>Modificar asistencia
-                </a>
+            </td>
+          </tr>
+
+          <tr th:each="profesor:${profesores}">
+            <th th:text="${profesor.nombreProf}"></th>
+            <td th:text="${profesor.apellidoProf}"></td>
+            <td th:text="${profesor.telefonoProf}"></td>
+            <td th:text="${profesor.dniProf}"></td>
+            <td>
+              <div class="d-flex align-items-stretch">
+                <div class="p-2">
+                  <a
+                    class="btn btn-warning"
+                    th:href="@{/admin/editar_profesor/}+${profesor.idProf}"
+                  >
+                    <span class="fa fa-pencil fa-fw"></span>Modificar asistencia
+                  </a>
+                </div>
               </div>
-            </div>          
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-          </td>
-        </tr>   
-      </tbody>
-      
-    </table>
-  </div>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
-  <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
-   <script>
-    $('.tabla_profesores').DataTable({
-      "language": {
-        "sProcessing":     "Procesando...",
-        "sLengthMenu":     "Mostrar _MENU_ registros",
-        "sZeroRecords":    "No se encontraron resultados",
-        "sEmptyTable":     "Ningún dato disponible en esta tabla",
-        "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-        "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
-        "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
-        "sInfoPostFix":    "",
-        "sSearch":         "Buscar clase:",
-        "sUrl":            "",
-        "sInfoThousands":  ",",
-        "sLoadingRecords": "Cargando...",
-        "oPaginate": {
-        "sFirst":    "Primero",
-        "sLast":     "Último",
-        "sNext":     "Siguiente",
-        "sPrevious": "Anterior"
-    },
-    "oAria": {
-        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
-        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-    },
-    "buttons": {
-        "copy": "Copiar",
-        "colvis": "Visibilidad"
-    }
-    }
-       
-  
- 
-  } );
-    
-  </script>
-
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
+    <script>
+      $(".tabla_profesores").DataTable({
+        language: {
+          sProcessing: "Procesando...",
+          sLengthMenu: "Mostrar _MENU_ registros",
+          sZeroRecords: "No se encontraron resultados",
+          sEmptyTable: "Ningún dato disponible en esta tabla",
+          sInfo:
+            "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+          sInfoEmpty:
+            "Mostrando registros del 0 al 0 de un total de 0 registros",
+          sInfoFiltered: "(filtrado de un total de _MAX_ registros)",
+          sInfoPostFix: "",
+          sSearch: "Buscar clase:",
+          sUrl: "",
+          sInfoThousands: ",",
+          sLoadingRecords: "Cargando...",
+          oPaginate: {
+            sFirst: "Primero",
+            sLast: "Último",
+            sNext: "Siguiente",
+            sPrevious: "Anterior",
+          },
+          oAria: {
+            sSortAscending:
+              ": Activar para ordenar la columna de manera ascendente",
+            sSortDescending:
+              ": Activar para ordenar la columna de manera descendente",
+          },
+          buttons: {
+            copy: "Copiar",
+            colvis: "Visibilidad",
+          },
+        },
+      });
+    </script>
+  </body>
 </html>
