--- a/src/main/resources/templates/form_horario.html
+++ b/src/main/resources/templates/form_horario.html
@@ -1,85 +1,161 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
-  <!--Iconos de FontAwesome-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-  <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="/funciones.js"></script>
-    
-</head>
-<body>
-  <div class="d-flex">
-    <div class="p-2 mr-auto">
-        <img src="static/img/deportes.png" th:src="@{/img/deportes.png}" alt="Inicio" width="120" height="120" />
-    </div>
-    <div class="p-2">
-      <img src="static/img/escudo.png" width="100" height="100"  th:src="@{/img/escudo.png}" alt="deportes" />
-    </div>
-  </div>
-  <!--Navbar header-->
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-      
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-md-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Administrador
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/logout">Cerrar sesión</a>
-            </div>
-          </li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"
+    />
+    <!--Iconos de FontAwesome-->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/76bcb4e810.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="/funciones.js"></script>
+  </head>
+  <body>
+    <div class="d-flex">
+      <div class="p-2 mr-auto">
+        <img
+          src="static/img/deportes.png"
+          th:src="@{/img/deportes.png}"
+          alt="Inicio"
+          width="120"
+          height="120"
+        />
       </div>
-    </nav>
-  </div>
-
-  <div class="container pt-3">
-        <div class="card">
-          <div class="card-header">
-              <h3>Agregar Horario</h3>
-          </div>
-          <div class="card-body">
-            <form th:action= "@{/admin/save_horario/}+${idclase}" th:object= "${horario}" method="POST">
-              <div class="form-group">
-                <input type="hidden" th:field="*{idHorario}" id="idhorario">
-              </div>	
-              
-              <div class="form-group form-inline">
-                <label class="mr-3"for="lugar">Lugar de práctica</label>
-                <input th:field="*{lugar}" type="text" class="form-control mr-4"/>
-                <label class="mr-3" for="dia_semana">Dias de la Semana</label>
-                <input th:field="*{dia_semana}" type="text" class="form-control"/>
-              </div>
-              <div class="form-group form-inline">
-                <label class= "mr-2" for="hora_inicio">Inicio</label>
-                <input th:field="*{hora_inicio}" type="time" class="form-control mr-4"/>
-                <label class = "mr-4" for="hora_fin">Hora fin</label>
-                <input th:field="*{hora_fin}" type="time" class="form-control"/>
-              </div>
-                  
-              <button type="submit" class="btn btn-primary" >Guardar</button>
-            </form>
-          </div>
-        </div>
+      <div class="p-2">
+        <img
+          src="static/img/escudo.png"
+          width="100"
+          height="100"
+          th:src="@{/img/escudo.png}"
+          alt="deportes"
+        />
+      </div>
     </div>
-    
-</body>
+    <!--Navbar header-->
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/lista_profesores"
+                ><h5>Administrar Profesores</h5></a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">
+                <h3>Administracion de clases</h3>
+                <span class="sr-only">(current)</span></a
+              >
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-md-auto">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                th:text="${#authentication.getPrincipal().getUsername()}"
+              >
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <a class="dropdown-item" href="/admin/configuracion"
+                  ><i class="fas fa-cog"></i> Configuracion</a
+                >
+                <li>
+                  <a class="dropdown-item" href="/admin/configuracion">
+                    <i class="fas fa-envelope"></i> Support</a
+                  >
+                </li>
+                <li class="divider"></li>
+                <li>
+                  <a class="dropdown-item" href="/logout"
+                    ><i class="fas fa-power-off"></i> Cerrar Sesión</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <div class="container pt-3">
+      <div class="card">
+        <div class="card-header">
+          <h3>Agregar Horario</h3>
+        </div>
+        <div class="card-body">
+          <form
+            th:action="@{/admin/save_horario/}+${idclase}"
+            th:object="${horario}"
+            method="POST"
+          >
+            <div class="form-group">
+              <input type="hidden" th:field="*{idHorario}" id="idhorario" />
+            </div>
+
+            <div class="form-group form-inline">
+              <label class="mr-3" for="lugar">Lugar de práctica</label>
+              <input
+                th:field="*{lugar}"
+                type="text"
+                class="form-control mr-4"
+              />
+              <label class="mr-3" for="dia_semana">Dias de la Semana</label>
+              <input
+                th:field="*{dia_semana}"
+                type="text"
+                class="form-control"
+              />
+            </div>
+            <div class="form-group form-inline">
+              <label class="mr-2" for="hora_inicio">Inicio</label>
+              <input
+                th:field="*{hora_inicio}"
+                type="time"
+                class="form-control mr-4"
+              />
+              <label class="mr-4" for="hora_fin">Hora fin</label>
+              <input th:field="*{hora_fin}" type="time" class="form-control" />
+            </div>
+
+            <button type="submit" class="btn btn-primary">Guardar</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
