--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -1,180 +1,284 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Clases</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!--StyleSheets CSS-->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <!--Iconos de FontAwesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-    <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/76bcb4e810.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
     <script src="/showSelector.js"></script>
 
     <!--tablas-->
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.datatables.net/plug-ins/1.10.21/i18n/Spanish.json"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
-</head>
-<body>
-  <!--logos-->
-  <div class="d-flex">
-    <div class="p-2 mr-auto">
-        <img src="static/img/deportes.png" th:src="@{/img/deportes.png}" alt="Inicio" width="120" height="120" />
-    </div>
-    <div class="p-2">
-      <img src="static/img/escudo.png" width="100" height="100"  th:src="@{/img/escudo.png}" alt="deportes" />
-    </div>
-  </div>
-
-  <!--Navbar header-->
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-      
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#"> <h3>Administracion de clases</h3> <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-        
-        <ul class="navbar-nav ml-md-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Administrador
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/logout">Cerrar sesión</a>
-            </div>
-          </li>
-        
-        </ul>
+  </head>
+  <body>
+    <!--logos-->
+    <div class="d-flex">
+      <div class="p-2 mr-auto">
+        <img
+          src="static/img/deportes.png"
+          th:src="@{/img/deportes.png}"
+          alt="Inicio"
+          width="120"
+          height="120"
+        />
       </div>
-    </nav>
-  </div>
-  
-  <div class="container pt-3">
+      <div class="p-2">
+        <img
+          src="static/img/escudo.png"
+          width="100"
+          height="100"
+          th:src="@{/img/escudo.png}"
+          alt="deportes"
+        />
+      </div>
+    </div>
+
+    <!--Navbar header-->
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-bottom">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/lista_profesores"
+                ><h5>Administrar Profesores</h5></a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">
+                <h3>Administracion de clases</h3>
+                <span class="sr-only">(current)</span></a
+              >
+            </li>
+          </ul>
+
+          <ul class="navbar-nav ml-md-auto">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                th:text="${#authentication.getPrincipal().getUsername()}"
+              >
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <a class="dropdown-item" href="/admin/configuracion"
+                  ><i class="fas fa-cog"></i> Configuracion</a
+                >
+                <li>
+                  <a class="dropdown-item" href="/admin/configuracion">
+                    <i class="fas fa-envelope"></i> Support</a
+                  >
+                </li>
+                <li class="divider"></li>
+                <li>
+                  <a class="dropdown-item" href="/logout"
+                    ><i class="fas fa-power-off"></i> Cerrar Sesión</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <div class="container pt-3">
       <div class="d-flex flex-row justify-content-center">
         <div class="row">
           <button class="btn btn-info p-2 mr-2">Generar infome</button>
-          <button class="btn btn-primary btn-lg p-2" onclick="mostrar('formularioClase')">Nueva clase</button>
+          <button
+            class="btn btn-primary btn-lg p-2"
+            onclick="mostrar('formularioClase')"
+          >
+            Nueva clase
+          </button>
         </div>
       </div>
-  </div>
+    </div>
 
-  <div class="container pt-3 w-75 h-25" id="formularioClase" style="display:none">
-      <form th:action="@{/admin/save_clase}" th:object=${clase} method="POST">
+    <div
+      class="container pt-3 w-75 h-25"
+      id="formularioClase"
+      style="display: none"
+    >
+      <form th:action="@{/admin/save_clase}" th:object="${clase}" method="POST">
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-row justify-content-center">
-              <input type="hidden" th:field=*{idClase}>
+              <input type="hidden" th:field="*{idClase}" />
               <div class="form-group form-inline p-2">
                 <label class="mr-2" for="nombre">Nombre de la Clase:</label>
-                <input type="text" id="nombre" name="nombre" th:field= *{nombreDep} class="form-control mr-4 col-lg-3">
+                <input
+                  type="text"
+                  id="nombre"
+                  name="nombre"
+                  th:field="*{nombreDep}"
+                  class="form-control mr-4 col-lg-3"
+                />
                 <label class="mr-2" for="deporte">Deporte:</label>
-                <input type="text" id="Deporte" name="deporte" th:field= *{deporte} class="form-control mr-2 col-lg-3">
-                <button type="submit" class="btn btn-primary"> <i class="fas fa-plus"></i></button>
+                <input
+                  type="text"
+                  id="Deporte"
+                  name="deporte"
+                  th:field="*{deporte}"
+                  class="form-control mr-2 col-lg-3"
+                />
+                <button type="submit" class="btn btn-primary">
+                  <i class="fas fa-plus"></i>
+                </button>
               </div>
-              
             </div>
           </div>
         </div>
-        
       </form>
-  </div>
-  
-  
-  <div class="container pt-3">
-    <table class="table table-striped table-bordered table-responsive tabla_clases">
-      <thead> 
-        <tr>
-          <th class="col-sm-2">Nombre</th>
-          <th class="col-sm-1">Deporte</th>
-          <th class="col-sm-1">Acciones</th>
-        </tr>
+    </div>
 
-      </thead>
-  
-      <tbody>
-        <tr  th:each = "clase:${clases}">
-          <th  th:text="${clase.nombreDep}">	</th>
-          <td  th:text="${clase.deporte}"> </td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning" th:href="@{/admin/editar_clase/}+${clase.idClase}">
-                  <span class="fas fa-pencil-alt"></span>
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger"  th:onclick="eliminarclase([[${clase.idClase}]])">
-                  <span class="fas fa-trash-alt"></span>
-                </a>
-              </div>
-              <div class="p-2">
-                <a class ="btn btn-info" th:href="@{/admin/lista_horarios/}+${clase.idClase}">
-                  <span class="fas fa-clock"></span>
-                </a>
-              </div>
-              
-            </div>   
-          </td>
-        </tr>   
-      </tbody>
-      
-    </table>
-  </div>
+    <div class="container pt-3">
+      <table
+        class="table table-striped table-bordered table-responsive tabla_clases"
+      >
+        <thead>
+          <tr>
+            <th class="col-sm-2">Nombre</th>
+            <th class="col-sm-1">Deporte</th>
+            <th class="col-sm-1">Acciones</th>
+          </tr>
+        </thead>
 
-  <script>
-    $('.tabla_clases').DataTable({
-      "language": {
-        "sProcessing":     "Procesando...",
-        "sLengthMenu":     "Mostrar _MENU_ registros",
-        "sZeroRecords":    "No se encontraron resultados",
-        "sEmptyTable":     "Ningún dato disponible en esta tabla",
-        "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-        "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
-        "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
-        "sInfoPostFix":    "",
-        "sSearch":         "Buscar:",
-        "sUrl":            "",
-        "sInfoThousands":  ",",
-        "sLoadingRecords": "Cargando...",
-        "oPaginate": {
-        "sFirst":    "Primero",
-        "sLast":     "Último",
-        "sNext":     "Siguiente",
-        "sPrevious": "Anterior"
-    },
-    "oAria": {
-        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
-        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-    },
-    "buttons": {
-        "copy": "Copiar",
-        "colvis": "Visibilidad"
-    }
-    }
-       
-  
- 
-  } );
-    
-  </script>
-</body>
+        <tbody>
+          <tr th:each="clase:${clases}">
+            <th th:text="${clase.nombreDep}"></th>
+            <td th:text="${clase.deporte}"></td>
+            <td>
+              <div class="d-flex align-items-stretch">
+                <div class="p-2">
+                  <a
+                    class="btn btn-warning"
+                    th:href="@{/admin/editar_clase/}+${clase.idClase}"
+                  >
+                    <span class="fas fa-pencil-alt"></span>
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a
+                    class="btn btn-danger"
+                    th:onclick="eliminarclase([[${clase.idClase}]])"
+                  >
+                    <span class="fas fa-trash-alt"></span>
+                  </a>
+                </div>
+                <div class="p-2">
+                  <a
+                    class="btn btn-info"
+                    th:href="@{/admin/lista_horarios/}+${clase.idClase}"
+                  >
+                    <span class="fas fa-clock"></span>
+                  </a>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <script>
+      $(".tabla_clases").DataTable({
+        language: {
+          sProcessing: "Procesando...",
+          sLengthMenu: "Mostrar _MENU_ registros",
+          sZeroRecords: "No se encontraron resultados",
+          sEmptyTable: "Ningún dato disponible en esta tabla",
+          sInfo:
+            "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+          sInfoEmpty:
+            "Mostrando registros del 0 al 0 de un total de 0 registros",
+          sInfoFiltered: "(filtrado de un total de _MAX_ registros)",
+          sInfoPostFix: "",
+          sSearch: "Buscar:",
+          sUrl: "",
+          sInfoThousands: ",",
+          sLoadingRecords: "Cargando...",
+          oPaginate: {
+            sFirst: "Primero",
+            sLast: "Último",
+            sNext: "Siguiente",
+            sPrevious: "Anterior",
+          },
+          oAria: {
+            sSortAscending:
+              ": Activar para ordenar la columna de manera ascendente",
+            sSortDescending:
+              ": Activar para ordenar la columna de manera descendente",
+          },
+          buttons: {
+            copy: "Copiar",
+            colvis: "Visibilidad",
+          },
+        },
+      });
+    </script>
+  </body>
 </html>
