--- a/src/main/resources/templates/lista_profesores_clases.html
+++ b/src/main/resources/templates/lista_profesores_clases.html
@@ -15,6 +15,8 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
     <script src="/showSelector.js"></script>
+        <script src="/showSelector.js"></script>
+
 
     <!--tablas-->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>    
@@ -57,14 +59,15 @@
         
         <ul class="navbar-nav ml-md-auto">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Administrador
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text ="${#authentication.getPrincipal().getUsername()}">
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/logout">Cerrar sesión</a>
-            </div>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/admin/configuracion"><i class="fas fa-cog"></i> Configuracion</a>
+              <li><a class="dropdown-item" href="/admin/configuracion"> <i class="fas fa-envelope"></i> Support</a></li>
+              <li class="divider"></li>
+              <li><a class="dropdown-item" href="/logout"><i class="fas fa-power-off"></i> Cerrar Sesión</a></li>
+            </ul>
           </li>
-        
         </ul>
       </div>
     </nav>
