Login para profesores!
correccion la relacion de asistencia

--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -157,7 +157,7 @@
         </div>
       </div>
     </div>
-
+    <div class="alert alert-danger" role="alert" th:if="${noExisteClase} == true"> <p>La ultima clase no fue editada, no existe clase con este ID</p></div>
     <div
       class="container pt-3 w-75 h-25"
       id="formularioClase"
