--- a/src/main/resources/templates/lista_horarios.html
+++ b/src/main/resources/templates/lista_horarios.html
@@ -106,7 +106,7 @@
                 </a>
               </div>
               <div class="p-2">
-                <button class ="btn btn-danger" th:onclick="|eliminarhorario('${horario.idHorario}','${idclase}')|">
+                <button class ="btn btn-danger" th:onclick="|eliminarhorario('${horario.idHorario}')|">
                   <span class="fas fa-minus"></span>
               </div>
               
