--- a/src/main/resources/templates/form_horario.html
+++ b/src/main/resources/templates/form_horario.html
@@ -119,10 +119,14 @@
         </div>
         <div class="card-body">
           <form
-            th:action="@{/admin/save_horario/}+${idclase}"
+            th:action="@{/admin/save_horario/} +${idclase}"
             th:object="${horario}"
             method="POST"
           >
+            <div class="form-group">
+              <input type="hidden" th:name="clase" th:id="clase "th:value = "${idclase}" th:text=${idclase}>
+            </div>
+            
             <div class="form-group">
               <input type="hidden" th:field="*{idHorario}" id="idhorario" />
             </div>
