--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,45 +14,42 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-    <div class="wrapper fadeInDown">	
-        <div id="formContent">
-          <!-- Tabs Titles -->
-      
-          <!-- Icon  -->
-          <div class="fadeIn first">
-            <img src="static/img/escudo.png" th:src="@{/img/escudo.png}" width="300" height="300" id="icono usuario" alt="icono de usuario"/>
-          </div>
-      
-          <!-- Login Form -->
-          <form th:action="@{/login}" method="post">
-            <div class="form-group">
-            	<i class="fa fa-user icon"></i>
-                <input type="text" class="fadeIn second" placeholder="Nombre de usuario" name="username"/>
+    <div class="container">
+        <div class="wrapper fadeInDown">	
+            <div id="formContent">
+                <div class="fadeIn first">
+                    <div class="row">
+                        <div class="col-sm-8 col-xs-4 mx-auto d-block">
+                            <img src="static/img/escudo.png" th:src="@{/img/escudo.png}" class="img-fluid rounded mx-auto d-block" id="icono usuario" alt="icono de usuario"/>
+                        </div>
+                    </div>
+                </div>
+              
+              <form th:action="@{/login}" method="post">
+                <div class="form-group">
+                    <i class="fa fa-user icon"></i>
+                    <input type="text" class="fadeIn second" placeholder="Nombre de usuario" name="username"/>
+                </div>
+                <div class="form-group">
+                    <i class="fa fa-key icon"></i>
+                    <input type="password" class = "fadeIn third" placeholder="Contraseña" name="password"/>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-primary btn-lg"><i class="fas fa-sign-in-alt"></i> Ingresar </button>
+                </div>
+            </form>
+            
+            <div id="formFooter">
+                <div id="invalid user" th:if="${param.error}" class="alert alert-danger" role="alert">
+                    <label> Usuario o contraseña invalido . </label> 
+                </div>
+                <div id="loged out" th:if="${param.logout}" class="alert alert-success" role="alert">
+                    usted ha sido desconectado.
+                </div>
             </div>
-            <div class="form-group">
-            	<i class="fa fa-key icon"></i>
-        		<input type="password" class = "fadeIn third" placeholder="Contraseña" name="password"/>
             </div>
-            <div>
-                <button type="submit" class="btn btn-primary btn-lg"><i class="fas fa-sign-in-alt"></i> Ingresar </button>
-            </div>
-        </form>
-        
-      
-          <!-- Remind Passowrd -->
-        <div id="formFooter">
-            <div id="invalid user" th:if="${param.error}" class="alert alert-danger" role="alert">
-                <label> Usuario o contraseña invalido . </label> 
-            </div>
-            <div id="loged out" th:if="${param.logout}" class="alert alert-success" role="alert">
-                usted ha sido desconectado.
-            </div>
-
-        </div>
-      
         </div>
     </div>
-    
 </body>
 </html>
 
