--- a/src/main/resources/templates/lista_horarios.html
+++ b/src/main/resources/templates/lista_horarios.html
@@ -83,8 +83,8 @@
     <table class="table table-striped table-bordered table-responsive tabla_horarios">
       <thead> 
         <tr>
-          <th class="col-sm-1">Dia</th>
           <th class="col-sm-1">Lugar</th>
+          <th class="col-sm-1">Dia</th>
           <th class="col-sm-1">Horario inicio</th>
           <th class="col-sm-1">Horario fin</th>
           <th class="col-sm-2">Acciones</th>
@@ -93,8 +93,10 @@
   
       <tbody>
         <tr  th:each = "horario:${clase}">
-            <td  th:text="${horario.dia_semana}"> </td>
             <td  th:text="${horario.lugar}"> </td>
+            <td>
+              <span class="card" th:each= "dia : ${horario.dias}"><p th:text="${dia.diaDeLaSemana}"></p></span> 
+            </td>
             <td  th:text="${horario.hora_inicio}">	</th>
             <td  th:text="${horario.hora_fin}"> </td>
 
