--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -77,7 +77,12 @@
     <div class="d-flex flex-row justify-content-center">
       <div class="row">
         <div class="p-2">
-          <a class= "btn btn-lg btn-info mr-2" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Generar informe</a>
+          <a class= "btn btn-lg btn-info mr-2" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Listado de profesores</a>
+        </div>
+        <div class="p-2">
+          <a class= "btn btn-lg btn-info mr-2" href="/admin/lista_profesores/export"> <span class="fas fa-book"></span> Listado de profesores</a>
+        </div>
+        <div class="-2">
           <button class="btn btn-primary btn-lg" onclick="mostrar('formularioProfesor')">Nuevo Profesor</button>
         </div>
       </div>
