--- a/src/main/resources/templates/logedin_profesor_horarios.html
+++ b/src/main/resources/templates/logedin_profesor_horarios.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mis asistencias</title>
+    <title>Mis Horarios</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -49,13 +49,13 @@
                 <ul class="navbar-nav">
                 
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"> <h3>Sistema de Gestión</h3> <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#"> <h3>Sistema de Gestión</h3></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/profesor/lista_clases"><h5>Mis clases</h5></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/profesor/lista_clases"><h5>Mis horarios</h5></a>
+                    <a class="nav-link" href="/profesor/lista_clases"><h3>Mis horarios</h3> <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/profesor/lista_clases"><h5>Mis Asistencias</h5></a>
@@ -66,15 +66,6 @@
             </nav>
         </div>
         
-        <div class="container pt-3">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 th:text=" 'Bienvenido, ' + ${profesor.nombreProf} + ' ' + ${profesor.apellidoProf}"  ></h1>
-                </div>
-            </div>
-            <button class="btn btn-primary" onclick="mostrar('x')">Registrar asistencias</button>
-        </div> 
-       
         <div class="container pt-3">
             <table class="table table-striped table-bordered table-responsive" style="display:none" id="x">
                 <thead>                
@@ -134,4 +125,5 @@
     
     
 </body>
+</html>
 </html>
